generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider  = "postgresql"
  url       = env("DATABASE_URL")
  directUrl = env("DIRECT_URL")
}

model User {
  id                     Int                     @id @default(autoincrement())
  email                  String                  @unique
  firstName              String
  lastName               String
  company                String?
  role                   UserRole                @default(USER)
  createdAt              DateTime                @default(now())
  updatedAt              DateTime                @updatedAt
  emailVerified          Boolean                 @default(false)
  supabaseUserId         String?                 @unique
  deletedAt              DateTime?
  walletAddress          String?                 @unique
  cartItems              CartItem[]
  notifications          Notification[]
  notificationPreference NotificationPreference?
  orders                 Order[]

  @@index([email])
  @@index([role])
  @@index([supabaseUserId])
}

model Forest {
  id              Int            @id @default(autoincrement())
  name            String
  location        String
  type            String
  area            Float
  description     String
  status          ForestStatus   @default(ACTIVE)
  lastUpdated     DateTime
  createdAt       DateTime       @default(now())
  deletedAt       DateTime?
  contractAddress String?
  onChainTokenId  Int?           @unique
  mintTxHash      String?        @unique
  mintBlockNumber Int?
  mintChainId     Int?
  mintedAt        DateTime?
  credits         CarbonCredit[]

  @@index([status])
  @@index([contractAddress])
  @@index([onChainTokenId])
}

model CarbonCredit {
  id               Int            @id @default(autoincrement())
  forestId         Int
  vintage          Int
  certification    String
  totalCredits     Int
  availableCredits Int
  pricePerCredit   Float
  createdAt        DateTime       @default(now())
  updatedAt        DateTime       @updatedAt
  symbol           String         @default("tCO₂")
  retiredCredits   Int            @default(0)
  deletedAt        DateTime?
  onChainId        String?
  metadataURI      String?
  forest           Forest         @relation(fields: [forestId], references: [id], onDelete: Cascade)
  cartItems        CartItem[]
  exchangeRates    ExchangeRate[]
  orderItems       OrderItem[]

  @@index([forestId])
  @@index([vintage])
  @@index([certification])
}

model ExchangeRate {
  id             Int          @id @default(autoincrement())
  carbonCreditId Int
  rate           Float
  currency       String       @default("USD")
  effectiveFrom  DateTime
  effectiveTo    DateTime?
  carbonCredit   CarbonCredit @relation(fields: [carbonCreditId], references: [id], onDelete: Cascade)
  orderItems     OrderItem[]

  @@index([carbonCreditId])
  @@index([effectiveFrom])
}

model Order {
  id              Int            @id @default(autoincrement())
  userId          Int
  createdAt       DateTime       @default(now())
  status          OrderStatus    @default(PENDING)
  totalPrice      Float
  totalCredits    Int            @default(0)
  currency        String         @default("USD")
  totalUsd        Float          @default(0)
  seller          String
  buyer           String
  paidAt          DateTime?
  shippingAddress String?
  failureReason   String?
  deletedAt       DateTime?
  orderCode       Int            @unique
  paymentProvider String         @default("PAYOS")
  transactionHash String?
  certificate     Certificate?
  user            User           @relation(fields: [userId], references: [id])
  orderHistory    OrderHistory[]
  items           OrderItem[]
  payments        Payment[]

  @@index([userId])
  @@index([status])
  @@index([createdAt])
  @@index([orderCode])
}

model OrderItem {
  id             Int           @id @default(autoincrement())
  orderId        Int
  carbonCreditId Int
  quantity       Int
  pricePerCredit Float
  subtotal       Float
  usdAmount      Float         @default(0)
  exchangeRateId Int?
  retired        Boolean       @default(false)
  carbonCredit   CarbonCredit  @relation(fields: [carbonCreditId], references: [id])
  exchangeRate   ExchangeRate? @relation(fields: [exchangeRateId], references: [id])
  order          Order         @relation(fields: [orderId], references: [id], onDelete: Cascade)

  @@index([orderId])
  @@index([carbonCreditId])
}

model CartItem {
  id             Int          @id @default(autoincrement())
  userId         Int
  carbonCreditId Int
  quantity       Int
  createdAt      DateTime     @default(now())
  updatedAt      DateTime     @updatedAt
  addedAt        DateTime     @default(now())
  carbonCredit   CarbonCredit @relation(fields: [carbonCreditId], references: [id], onDelete: Cascade)
  user           User         @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([userId, carbonCreditId])
  @@index([userId])
}

model Payment {
  id                 Int           @id @default(autoincrement())
  orderId            Int
  amount             Float
  currency           String        @default("USD")
  status             PaymentStatus @default(PENDING)
  failureReason      String?
  method             String?
  createdAt          DateTime      @default(now())
  updatedAt          DateTime      @updatedAt
  orderCode          Int
  paidAt             DateTime?
  paymentData        Json?
  payosOrderCode     Int?
  payosPaymentLinkId String?
  payosReference     String?
  order              Order         @relation(fields: [orderId], references: [id], onDelete: Cascade)

  @@index([orderId])
  @@index([orderCode])
  @@index([status])
  @@index([payosPaymentLinkId])
}

model OrderHistory {
  id        Int      @id @default(autoincrement())
  orderId   Int
  event     String
  message   String?
  createdAt DateTime @default(now())
  order     Order    @relation(fields: [orderId], references: [id], onDelete: Cascade)

  @@index([orderId])
  @@index([createdAt])
}

model Certificate {
  id              String            @id @default(cuid())
  orderId         Int               @unique
  certificateHash String            @unique
  issuedAt        DateTime          @default(now())
  status          CertificateStatus @default(active)
  metadata        Json?
  createdAt       DateTime          @default(now())
  updatedAt       DateTime          @updatedAt
  order           Order             @relation(fields: [orderId], references: [id], onDelete: Cascade)

  @@index([orderId])
  @@index([status])
}

model BlockchainAnchor {
  id          Int       @id @default(autoincrement())
  merkleRoot  String
  txHash      String?   @unique
  blockNumber Int?
  chainId     Int
  auditCount  Int
  orderIds    Int[]
  status      String    @default("PENDING")
  createdAt   DateTime  @default(now())
  confirmedAt DateTime?

  @@index([status])
  @@index([createdAt])
  @@index([merkleRoot])
}

model WebhookEvent {
  id           String    @id @default(cuid())
  orderCode    Int
  signature    String    @unique
  status       String    @default("RETRYING")
  processedAt  DateTime?
  retryCount   Int       @default(0)
  errorMessage String?
  webhookData  Json
  createdAt    DateTime  @default(now())
  updatedAt    DateTime  @updatedAt

  @@index([orderCode])
  @@index([signature])
  @@index([status, createdAt])
  @@index([createdAt])
}

model Notification {
  id         String                 @id @default(cuid())
  userId     Int
  type       String
  title      String
  message    String
  priority   String                 @default("info")
  status     String                 @default("unread")
  entityType String?
  entityId   String?
  dedupeKey  String
  metadata   Json?
  createdAt  DateTime               @default(now())
  readAt     DateTime?
  archivedAt DateTime?
  user       User                   @relation(fields: [userId], references: [id], onDelete: Cascade)
  deliveries NotificationDelivery[]

  @@unique([userId, type, entityId, dedupeKey])
  @@index([userId, createdAt(sort: Desc)])
  @@index([userId, status])
  @@index([type, createdAt])
}

model NotificationDelivery {
  id                String       @id @default(cuid())
  notificationId    String
  channel           String       @default("in_app")
  deliveryState     String       @default("delivered")
  deliveredAt       DateTime     @default(now())
  providerMessageId String?
  notification      Notification @relation(fields: [notificationId], references: [id], onDelete: Cascade)

  @@index([notificationId, deliveredAt(sort: Desc)])
}

model NotificationPreference {
  id           String   @id @default(cuid())
  userId       Int      @unique
  orders       Boolean  @default(true)
  certificates Boolean  @default(true)
  credits      Boolean  @default(true)
  adminOps     Boolean  @default(true)
  createdAt    DateTime @default(now())
  updatedAt    DateTime @updatedAt
  user         User     @relation(fields: [userId], references: [id], onDelete: Cascade)
}

enum OrderStatus {
  PENDING
  PROCESSING
  COMPLETED
  CANCELLED
  FAILED
  PAID
  EXPIRED
}

enum PaymentStatus {
  PENDING
  PAID
  FAILED
  CANCELLED
  EXPIRED
}

enum UserRole {
  USER
  ADMIN
}

enum ForestStatus {
  ACTIVE
  MONITORING
  INACTIVE
}

enum CertificateStatus {
  active
  revoked
  expired
}
