//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id Int [pk, increment]
  email String [unique, not null]
  firstName String [not null]
  lastName String [not null]
  company String
  role UserRole [not null, default: 'USER']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  emailVerified Boolean [not null, default: false]
  supabaseUserId String [unique]
  deletedAt DateTime
  walletAddress String [unique]
  cartItems CartItem [not null]
  notifications Notification [not null]
  notificationPreference NotificationPreference
  orders Order [not null]
}

Table Forest {
  id Int [pk, increment]
  name String [not null]
  location String [not null]
  type String [not null]
  area Float [not null]
  description String [not null]
  status ForestStatus [not null, default: 'ACTIVE']
  lastUpdated DateTime [not null]
  createdAt DateTime [default: `now()`, not null]
  deletedAt DateTime
  contractAddress String
  onChainTokenId Int [unique]
  mintTxHash String [unique]
  mintBlockNumber Int
  mintChainId Int
  mintedAt DateTime
  credits CarbonCredit [not null]
}

Table CarbonCredit {
  id Int [pk, increment]
  forestId Int [not null]
  vintage Int [not null]
  certification String [not null]
  totalCredits Int [not null]
  availableCredits Int [not null]
  pricePerCredit Float [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  symbol String [not null, default: 'tCO₂']
  retiredCredits Int [not null, default: 0]
  deletedAt DateTime
  onChainId String
  metadataURI String
  forest Forest [not null]
  cartItems CartItem [not null]
  exchangeRates ExchangeRate [not null]
  orderItems OrderItem [not null]
}

Table ExchangeRate {
  id Int [pk, increment]
  carbonCreditId Int [not null]
  rate Float [not null]
  currency String [not null, default: 'USD']
  effectiveFrom DateTime [not null]
  effectiveTo DateTime
  carbonCredit CarbonCredit [not null]
  orderItems OrderItem [not null]
}

Table Order {
  id Int [pk, increment]
  userId Int [not null]
  createdAt DateTime [default: `now()`, not null]
  status OrderStatus [not null, default: 'PENDING']
  totalPrice Float [not null]
  totalCredits Int [not null, default: 0]
  currency String [not null, default: 'USD']
  totalUsd Float [not null, default: 0]
  seller String [not null]
  buyer String [not null]
  paidAt DateTime
  shippingAddress String
  failureReason String
  deletedAt DateTime
  orderCode Int [unique, not null]
  paymentProvider String [not null, default: 'PAYOS']
  transactionHash String
  certificate Certificate
  user User [not null]
  orderHistory OrderHistory [not null]
  items OrderItem [not null]
  payments Payment [not null]
}

Table OrderItem {
  id Int [pk, increment]
  orderId Int [not null]
  carbonCreditId Int [not null]
  quantity Int [not null]
  pricePerCredit Float [not null]
  subtotal Float [not null]
  usdAmount Float [not null, default: 0]
  exchangeRateId Int
  retired Boolean [not null, default: false]
  carbonCredit CarbonCredit [not null]
  exchangeRate ExchangeRate
  order Order [not null]
}

Table CartItem {
  id Int [pk, increment]
  userId Int [not null]
  carbonCreditId Int [not null]
  quantity Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  addedAt DateTime [default: `now()`, not null]
  carbonCredit CarbonCredit [not null]
  user User [not null]

  indexes {
    (userId, carbonCreditId) [unique]
  }
}

Table Payment {
  id Int [pk, increment]
  orderId Int [not null]
  amount Float [not null]
  currency String [not null, default: 'USD']
  status PaymentStatus [not null, default: 'PENDING']
  failureReason String
  method String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  orderCode Int [not null]
  paidAt DateTime
  paymentData Json
  payosOrderCode Int
  payosPaymentLinkId String
  payosReference String
  order Order [not null]
}

Table OrderHistory {
  id Int [pk, increment]
  orderId Int [not null]
  event String [not null]
  message String
  createdAt DateTime [default: `now()`, not null]
  order Order [not null]
}

Table Certificate {
  id String [pk]
  orderId Int [unique, not null]
  certificateHash String [unique, not null]
  issuedAt DateTime [default: `now()`, not null]
  status CertificateStatus [not null, default: 'active']
  metadata Json
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  order Order [not null]
}

Table BlockchainAnchor {
  id Int [pk, increment]
  merkleRoot String [not null]
  txHash String [unique]
  blockNumber Int
  chainId Int [not null]
  auditCount Int [not null]
  orderIds Int[] [not null]
  status String [not null, default: 'PENDING']
  createdAt DateTime [default: `now()`, not null]
  confirmedAt DateTime
}

Table WebhookEvent {
  id String [pk]
  orderCode Int [not null]
  signature String [unique, not null]
  status String [not null, default: 'RETRYING']
  processedAt DateTime
  retryCount Int [not null, default: 0]
  errorMessage String
  webhookData Json [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Notification {
  id String [pk]
  userId Int [not null]
  type String [not null]
  title String [not null]
  message String [not null]
  priority String [not null, default: 'info']
  status String [not null, default: 'unread']
  entityType String
  entityId String
  dedupeKey String [not null]
  metadata Json
  createdAt DateTime [default: `now()`, not null]
  readAt DateTime
  archivedAt DateTime
  user User [not null]
  deliveries NotificationDelivery [not null]

  indexes {
    (userId, type, entityId, dedupeKey) [unique]
  }
}

Table NotificationDelivery {
  id String [pk]
  notificationId String [not null]
  channel String [not null, default: 'in_app']
  deliveryState String [not null, default: 'delivered']
  deliveredAt DateTime [default: `now()`, not null]
  providerMessageId String
  notification Notification [not null]
}

Table NotificationPreference {
  id String [pk]
  userId Int [unique, not null]
  orders Boolean [not null, default: true]
  certificates Boolean [not null, default: true]
  credits Boolean [not null, default: true]
  adminOps Boolean [not null, default: true]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User [not null]
}

Enum OrderStatus {
  PENDING
  PROCESSING
  COMPLETED
  CANCELLED
  FAILED
  PAID
  EXPIRED
}

Enum PaymentStatus {
  PENDING
  PAID
  FAILED
  CANCELLED
  EXPIRED
}

Enum UserRole {
  USER
  ADMIN
}

Enum ForestStatus {
  ACTIVE
  MONITORING
  INACTIVE
}

Enum CertificateStatus {
  active
  revoked
  expired
}

Ref: CarbonCredit.forestId > Forest.id [delete: Cascade]

Ref: ExchangeRate.carbonCreditId > CarbonCredit.id [delete: Cascade]

Ref: Order.userId > User.id

Ref: OrderItem.carbonCreditId > CarbonCredit.id

Ref: OrderItem.exchangeRateId > ExchangeRate.id

Ref: OrderItem.orderId > Order.id [delete: Cascade]

Ref: CartItem.carbonCreditId > CarbonCredit.id [delete: Cascade]

Ref: CartItem.userId > User.id [delete: Cascade]

Ref: Payment.orderId > Order.id [delete: Cascade]

Ref: OrderHistory.orderId > Order.id [delete: Cascade]

Ref: Certificate.orderId - Order.id [delete: Cascade]

Ref: Notification.userId > User.id [delete: Cascade]

Ref: NotificationDelivery.notificationId > Notification.id [delete: Cascade]

Ref: NotificationPreference.userId - User.id [delete: Cascade]